syntax = "proto3";

option csharp_namespace = "BlazorPWAClientgRPC";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetList (TotalElementsRequest) returns (ElementsReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message TotalElementsRequest {
	int32 elements = 1;
}

message Element {
	int32 number = 1;
	string description = 2;
}

message ElementsReply {
	repeated Element items = 1;
}
